[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = { version = "1" }

smol_lib = { version = "1", package = "smol", optional = true }
blocking = { version = "1", optional = true }
async-io = { version = "1", optional = true }

tokio_lib = { version = "1", package = "tokio", default-features = false, features = [ "rt" ], optional = true }

[features]
default = [ "smol", "tokio" ]
smol = [ "smol_lib", "blocking", "async-io" ]
tokio = [ "tokio_lib" ]